<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BikePower</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_about">About Bike Power</string>
    <string name="Power">Power</string>
    <string name="Speed">Speed</string>
    <string name="Distance">Distance</string>
    <string name="Time">Time</string>
    <string name="Cadence">Cadence</string>
    <string name="Calories">Calories</string>
    <string name="PowerUnits">Watts</string>
    <string name="SpeedUnits">kmph</string>
    <string name="DistanceUnits">kms</string>
    <string name="CadenceUnits">rpm</string>
    <string name="CaloriesUnits">kCals</string>
    <string name="PowerRes">0</string>
    <string name="SpeedRes">0</string>
    <string name="DistanceRes">0</string>
    <string name="TimeHrsRes">00</string>
    <string name="TimeMinsRes">00</string>
    <string name="TimeSecsRes">00</string>
    <string name="TimeMillisRes">00</string>
    <string name="ColonSeparator">:</string>
    <string name="CadenceRes">0</string>
    <string name="CaloriesRes">0</string>
    <string name="DotsDashes">..................................</string>
    <string name="AboutBikePower">Bike Power is a free application to calculate various parameters during your bicycle ride. Open source software made by Ashwin Upadhyaya.</string>
    <string name="prefsUserName">prefsUserName</string>
    <string name="prefsUserHeight">prefsUserHeight</string>
    <string name="prefsUserWeight">prefsUserWeight</string>
    <string name="prefsAirTemp">prefsAirTemp</string>
    <string name="prefsAltitude">prefsAltitude</string>
    <string name="prefsWindSpeed">prefsWindSpeed</string>
    <string name="prefsSlope">prefsSlope</string>
    <string name="prefsBikeWeight">prefsBikeWeight</string>
    <string name="prefsCadence">prefsCadence</string>
    
</resources>